# waves

./: .gitmodules  CMakeLists.txt  README.md
src/: camera.cpp  camera.h  gui.cpp  gui.h  logger.h  main.cpp  pch.h  timer.h  utils.h  window.h
src/ocean/: grid.cpp  grid.h  ocean.h
src/shaders/: CMakeLists.txt  blit.ps.hlsl  blit.vs.hlsl  fft_horizontal.cs.hlsl  fft_vertical.cs.hlsl  imgui.ps.hlsl  imgui.vs.hlsl  initial_spectrum.cs.hlsl  normal_map.cs.hlsl  ocean.ps.hlsl  ocean.vs.hlsl  phase.cs.hlsl  spectrum.cs.hlsl  test.cs.hlsl  triangle.vs.hlsl
src/vk/: buffer.cpp  buffer.h  command_list.cpp  command_list.h  common.h  descs.h  descs_conversions.h  device.cpp  device.h  frame_pacing.cpp  frame_pacing.h  pipeline.cpp  pipeline.h  shader.cpp  shader.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h
